@@ -35,8 +35,6 @@
 #include "openturns/HistoryStrategy.hxx"
 #include "openturns/HistoryStrategyImplementation.hxx"
 #include "openturns/Last.hxx"
-#include "openturns/LinearModelFactory.hxx"
-#include "openturns/LinearModel.hxx"
 #include "openturns/LowDiscrepancySequence.hxx"
 #include "openturns/LowDiscrepancySequenceImplementation.hxx"
 #include "openturns/Null.hxx"
